[package]
name = "media"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.12"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
tracing = "0.1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros", "chrono", "migrate"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }
jsonwebtoken = "9"
tonic = "0.12"
url = "2"
prost = "0.13"

philand_logging = { package = "logging", path = "../libs/logging" }
philand_error = { package = "error", path = "../libs/error" }
philand_configs = { package = "configs", path = "../libs/configs" }
philand_storage = { package = "storage", path = "../libs/storage" }
philand_application = { package = "application", path = "../libs/application" }
philand_crypto = { package = "crypto", path = "../libs/crypto" }
